test/expected/explain_i-itself.out
explain int
           ^
12: error: declaration expected
